--- a/index.html
+++ b/index.html
@@ -95,16 +95,17 @@
                 <h1 class="text-center mb-0">Ward 39 &amp; You</h1>
                 <h5 class="text-center font-italic mb-3 text-dark">Ward 39 offers you a place to live, laugh, love and play</h5>
             </div>
-            <div class="container>">
-                <div class="row">
-                    <div class="col-md-2">
-                        <span data-toggle="popover" data-trigger="hover" title="John Letonja promises to..." data-content="...stay devoted to YOU, the public.">
+            <div class="container">
+                <div class="row cell mb-4" id="promise">
+                    <div class="col-md-3">
+                        <span data-toggle="popover" data-trigger="hover" data-placement="left" title="John Letonja promises to..." data-content="...stay devoted to YOU, the public.">
                             <a href="imgs/john canpane 2018 031.jpg" data-toggle="lightbox" data-title="John Letonja promises to..." data-footer="...stay devoted to YOU, the public.">
                                 <img class="img-fluid img-thumbnail mb-2" src="imgs/john canpane 2018 031.jpg" alt="John Letonja against the Toronto City Skyline">
                             </a>
                         </span>
                     </div>
-                    <div class="col-md-10">
+                    <div class="col-md-9">
+                        <h3>I, John Letonja, Promise to</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 Respect YOU, the taxpayers.
@@ -127,16 +128,30 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-2">
-                        <span data-toggle="popover" data-trigger="hover" data-placement="left" title="Knowlege &amp; Wisdom" data-content="John will use his personal experiences and scholarly knowlege to develop new strategies against the challenges at city hall.">
-                            <a href="imgs/john pictures june 2018 777.jpg" data-toggle="lightbox" data-title="Knowlege &amp; Wisdom" data-footer="John will use his personal experiences and scholarly knowlege to develop new strategies against the challenges at city hall.">
-                                <img class="img-fluid img-thumbnail mb-2 mx-auto cellImgResize" src="imgs/john pictures june 2018 777.jpg" alt="John Letonja working hard once again">
+                <div class="row cell mb-4" id="strength">
+                    <div class="col-md-3">
+                        <span data-toggle="popover" data-trigger="hover" data-placement="left" title="Figure of Strength" data-content="He will not falter as he stands and fights for YOU">
+                            <a class="marginCenter" href="imgs/john canpane 2018 008.jpg" data-toggle="lightbox" data-title="Figure of Strength" data-footer="He will not falter as he stands and fights for YOU">
+                                <img class="img-fluid img-thumbnail mb-2 mx-auto" src="imgs/john canpane 2018 008.jpg" alt="John Letonja next to a statue of a medieval soldier">
                             </a>
                         </span>
                     </div>
-                    <div class="col-md-10">
-                            <p>John Letonja has many personal and scholarly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to make new money for:</p>
+                    <div class="col-md-9">
+                        <h3>Knowlege and Wisdom</h3>
+                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councilors and putside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to your a reolution for your cause. John is also adament about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
+                    </div>
+                </div>
+                <div class="row cell mb-4" id="wisdom">
+                    <div class="col-md-3">
+                        <span data-toggle="popover" data-trigger="hover" data-placement="left" title="Knowlege &amp; Wisdom" data-content="John will use his personal experiences and scholarly knowlege to develop new strategies against the challenges at city hall.">
+                            <a href="imgs/john pictures june 2018 777.jpg" data-toggle="lightbox" data-title="Knowlege &amp; Wisdom" data-footer="John will use his personal experiences and scholarly knowlege to develop new strategies against the challenges at city hall.">
+                                <img class="img-fluid img-thumbnail mb-2 mx-auto" src="imgs/john pictures june 2018 777.jpg" alt="John Letonja working hard once again">
+                            </a>
+                        </span>
+                    </div>
+                    <div class="col-md-9">
+                        <h3>Figure of Strength</h3>
+                        <p>John Letonja has many personal and scholarly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to make new money for:</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 Making new money for the city without picking your pockets for money.
@@ -154,102 +169,6 @@
                                 Curating more activity for all the people that want to be active in their community
                             </li>
                         </ul>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2">
-                        <span data-toggle="popover" data-trigger="hover" data-placement="left" title="Figure of Strength" data-content="He will not falter as he stands and fights for YOU">
-                            <a class="marginCenter" href="imgs/john canpane 2018 008.jpg" data-toggle="lightbox" data-title="Figure of Strength" data-footer="He will not falter as he stands and fights for YOU">
-                                <img class="img-fluid img-thumbnail mb-2 mx-auto cellImgResize" src="imgs/john canpane 2018 008.jpg" alt="John Letonja next to a statue of a medieval soldier">
-                            </a>
-                        </span>
-                    </div>
-                    <div class="col-md-10">
-                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councilors and putside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to your a reolution for your cause. John is also adament about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        
-        <!-- Ward 39 & You -->
-        <div class="container-fluid section" id="ward39">
-            <div class="container mb-5">
-                <h1 class="text-center mb-0">Ward 39 &amp; You</h1>
-                <h5 class="text-center font-italic mb-3 text-dark">Ward 39 offers you a place to live, laugh, love and play</h5>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg mb-5" id="promise">
-                        <div class="cell">
-                            <h5 class="font-weight-bold">I, John Letonja, Promise to</h5> <!--data-toggle="popover" data-trigger="hover" data-content="Some content"-->
-                            <span data-toggle="popover" data-trigger="hover" title="John Letonja promises to..." data-content="...stay devoted to YOU, the public.">
-                                <a href="imgs/john canpane 2018 031.jpg" data-toggle="lightbox" data-title="John Letonja promises to..." data-footer="...stay devoted to YOU, the public.">
-                                    <img class="img-fluid img-thumbnail mb-2" src="imgs/john canpane 2018 031.jpg" alt="John Letonja against the Toronto City Skyline">
-                                </a>
-                            </span>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Respect YOU, the taxpayers.
-                                </li>
-                                <li class="list-group-item">
-                                    Stop DISCRIMINATION in City Hall.
-                                </li>
-                                <li class="list-group-item">
-                                    Stop the wasteful spending of YOUR money.
-                                </li>
-                                <li class="list-group-item">
-                                    Let everyone in our community have a say in what needs to be done.
-                                </li>
-                                <li class="list-group-item">
-                                    Help people to have a better living standard in our community.
-                                </li>
-                                <li class="list-group-item">
-                                    Call you back pesonally 24/7 to hear what YOU have to say,
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 mb-5" id="wisdom">
-                        <div class="cell">
-                            <h5 class="font-weight-bold">Knowlege &amp; Wisdom</h5>
-                            <span data-toggle="popover" data-trigger="hover" data-placement="left" title="Knowlege &amp; Wisdom" data-content="John will use his personal experiences and scholarly knowlege to develop new strategies against the challenges at city hall.">
-                                <a href="imgs/john pictures june 2018 777.jpg" data-toggle="lightbox" data-title="Knowlege &amp; Wisdom" data-footer="John will use his personal experiences and scholarly knowlege to develop new strategies against the challenges at city hall.">
-                                    <img class="img-fluid img-thumbnail mb-2 mx-auto cellImgResize" src="imgs/john pictures june 2018 777.jpg" alt="John Letonja working hard once again">
-                                </a>
-                            </span>
-                            <p>John Letonja has many personal and scholarly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to make new money for:</p>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                    Making new money for the city without picking your pockets for money.
-                                </li>
-                                <li class="list-group-item">
-                                    Making the streets safer and better for everyone.
-                                </li>
-                                <li class="list-group-item">
-                                    Making faster and cheaper transportation.
-                                </li>
-                                <li class="list-group-item">
-                                    Curating an affordable living and working space, as well as longer day care hours
-                                </li>
-                                <li class="list-group-item">
-                                    Curating more activity for all the people that want to be active in their community
-                                </li>
-                            </ul>
-                        </div>    
-                    </div>
-                    <div class="col-lg-6 mb-5" id="strength">
-                        <div class="cell">
-                            <h5 class="font-weight-bold">Figure of Strength</h5>
-                            <span data-toggle="popover" data-trigger="hover" data-placement="left" title="Figure of Strength" data-content="He will not falter as he stands and fights for YOU">
-                                <a class="marginCenter" href="imgs/john canpane 2018 008.jpg" data-toggle="lightbox" data-title="Figure of Strength" data-footer="He will not falter as he stands and fights for YOU">
-                                    <img class="img-fluid img-thumbnail mb-2 mx-auto cellImgResize" src="imgs/john canpane 2018 008.jpg" alt="John Letonja next to a statue of a medieval soldier">
-                                </a>
-                            </span>
-                            <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councilors and putside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to your a reolution for your cause. John is also adament about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
-                        </div>
                     </div>
                 </div>
             </div>
