Checked for Spelling Mistakes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="container">
                 <h1 class="text-center mb-0">About John</h1>
                 <h5 class="text-center text-secondary font-italic mb-4">John Letonja never gives up in fighting for what he believes in</h5>
-                <p>John Letonja is an inventor, social advocate, and a devoted family man who never stops working towards the common good. Having lived in Toronto for his entire life, John knows that progressing this large and complex city can be extremely challenging, but he is determined to do just that. He has seen how quickly the great city of Toronto has grown in the past: from a small, inconsequencial town in Canada, to our country's largest cultural and economic source of growth. He also knows the people of Toronto, and is especially close with those of Scarbarough. A loving father himself, John knows the struggles of raising a family; that stress quickly piles up. John believes that the city government should not be a source of stress to the regular resident, and aims to make his term in office stress free for Ward 39. John Letonja wants to work with you to become Ward 39's next city councilor.</p>
+                <p>John Letonja is an inventor, social advocate, and a devoted family man who never stops working towards the common good. Having lived in Toronto for his entire life, John knows that progressing this large and complex city can be extremely challenging, but he is determined to do just that. He has seen how quickly the great city of Toronto has grown in the past: from a small, inconsequential town in Canada, to our country's largest cultural and economic source of growth. He also knows the people of Toronto, and is especially close with those of Scarborough. A loving father himself, John knows the struggles of raising a family; that stress quickly piles up. John believes that the city government should not be a source of stress to the regular resident, and aims to make his term in office stress free for Ward 39. John Letonja wants to work with you to become Ward 39's next city councillor.</p>
             </div>
         </div>
 
@@ -123,7 +123,7 @@
                                 Help people to have a better living standard in our community.
                             </li>
                             <li class="list-group-item">
-                                Call you back pesonally 24/7 to hear what YOU have to say,
+                                Call you back personally 24/7 to hear what YOU have to say,
                             </li>
                         </ul>
                     </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-9">
                         <h3>Knowlege and Wisdom</h3>
-                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councilors and putside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to your a reolution for your cause. John is also adament about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
+                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councillors and outside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to your a resolution for your cause. John is also adamant about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
                     </div>
                 </div>
                 <div class="row cell mb-4" id="wisdom">
@@ -151,7 +151,7 @@
                     </div>
                     <div class="col-md-9">
                         <h3>Figure of Strength</h3>
-                        <p>John Letonja has many personal and scholarly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to make new money for:</p>
+                        <p>John Letonja has many personal and scholarly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to:</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 Making new money for the city without picking your pockets for money.
@@ -163,10 +163,10 @@
                                 Making faster and cheaper transportation.
                             </li>
                             <li class="list-group-item">
-                                Curating an affordable living and working space, as well as longer day care hours
+                                Curating an affordable living and working space, as well as longer day care hours.
                             </li>
                             <li class="list-group-item">
-                                Curating more activity for all the people that want to be active in their community
+                                Curating more events for those that want to be active in their community.
                             </li>
                         </ul>
                     </div>
@@ -182,11 +182,11 @@
                     <h5 class="text-center font-italic mb-3 text-secondary">John is always happy to answer the questions of a concerned citizen</h5>
                 </div>
                 <div class="row">
-                    <div class="col-sm" style="text-align: right;">
+                    <div class="col-sm rightAlignPhone textAlignContact">
                         <h3>Phone Number</h3>
                         <p>647-785-5055</p>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm textAlignContact">
                         <h3>Email</h3>
                         <p>John.Letonja@yahoo.ca</p>
                     </div>
