--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- My Custom JS-->
         <script src="my.js"></script>
         <title>John Letonja | Ward 39</title>
-        <link rel="icon" href="imgs/faceUpdated.png">
+        <link rel="icon" href="imgs/faceUpdated2Resize.png">
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
@@ -65,7 +65,7 @@
             <div class="container-fluid mb-0 titleContainer">
                 <div class="row">
                     <div class="col-md-6 col-lg-4 pl-0">
-                        <img class="img-fluid" src="imgs/faceUpdated2.png" alt="The Figure of John Letonja">
+                        <img class="img-fluid" src="imgs/faceUpdated2Resize.png" alt="The Figure of John Letonja">
                     </div>
                     <div class="col-md-6 col-lg-8">
                         <img class="img-fluid titleCard" src="imgs/titleCard.png" alt="John Letonja: Toronto Ward 39 City Council Candidate">
@@ -74,7 +74,7 @@
             </div>
             <!-- Hidden until a certain width is achieved-->
             <div class="container titleText mb-5">
-                <img class="titleImage img-thumbnail img-fluid" src="imgs/faceUpdatedBackground.png" alt="A Portrait of John Letonja">
+                <img class="titleImage img-thumbnail img-fluid" src="imgs/faceUpdatedBackground.jpg" alt="A Portrait of John Letonja">
                 <h1 class="mb-0 display-4">John Letonja</h1>
                 <h4 class="font-italic text-secondary">Toronto Ward 39 City Council Candidate</h4>
             </div>
@@ -85,7 +85,9 @@
             <div class="container">
                 <h1 class="text-center mb-0">About John</h1>
                 <h5 class="text-center text-secondary font-italic mb-4">John Letonja never gives up in fighting for what he believes in</h5>
-                <p>John Letonja is an inventor, social advocate, and a devoted family man who never stops working towards the common good. Having lived in Toronto for his entire life, John knows that progressing this large and complex city can be extremely challenging, but he is determined to do just that. He has seen how quickly the great city of Toronto has grown in the past: from a small, inconsequential town in Canada, to our country's largest cultural and economic source of growth. He also knows the people of Toronto, and is especially close with those of Scarborough. A loving father himself, John knows the struggles of raising a family; that stress quickly piles up. John believes that the city government should not be a source of stress to the regular resident, and aims to make his term in office stress free for Ward 39. John Letonja wants to work with you to become Ward 39's next city councillor.</p>
+                <p>John Letonja is an inventor, social advocate, and a devoted family man who never stops working towards the common good. Toronto is a progressive city that has some challenges that he will be determined to meet and coordinate with his personal experience of living in the city. The diversification and growth of the city, throughout the years have given a different perspective to John.  
+                <br><br>Toronto has become a key integral part of the cultural and economic hub in Ontario and it is the people that have contributed to this cohesion.  With Scarborough being a central influence to the landscape and influence to the vibrant city atmosphere.
+                <br><br>A loving father himself, John knows the struggles of raising a family; that stress quickly builds up to a pressure point. As a goal that he is committed to is to make the accessibility, communication and interaction points a stress-free environment for the residents of Ward 39.  John wants to represent Ward 39 as a city councillor, for the good of the community and the city.</p>
             </div>
         </div>
 
@@ -138,7 +140,7 @@
                     </div>
                     <div class="col-md-9">
                         <h3>Knowlege and Wisdom</h3>
-                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councillors and outside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to your a resolution for your cause. John is also adamant about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
+                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councillors and outside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to a resolution for your cause. John is also adamant about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
                     </div>
                 </div>
                 <div class="row cell mb-4" id="wisdom">
@@ -151,7 +153,7 @@
                     </div>
                     <div class="col-md-9">
                         <h3>Figure of Strength</h3>
-                        <p>John Letonja has many personal and scholarly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to:</p>
+                        <p>John Letonja has many personal and worldly experiences that he can draw from as he works for your benefit. His experience as an inventor helps him think outside the box on many day to day City Hall problems; his work ethic is incomparable. John will use his experiences to:</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 Making new money for the city without picking your pockets for money.
