--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href=# class="nav-link" id="voteClock"></a>
+                        <a href="https://www.toronto.ca/city-government/elections/general-information/update-on-the-2018-election/" class="nav-link" id="voteClock"></a>
                     </li>
                 </ul>
             </div>
