--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="container titleText mb-5">
                 <img class="titleImage img-thumbnail img-fluid" src="imgs/faceUpdatedBackground.jpg" alt="A Portrait of John Letonja">
                 <h1 class="mb-0 display-4">John Letonja</h1>
-                <h4 class="font-italic text-secondary">Toronto Ward 39 City Council Candidate</h4>
+                <h4 class="font-italic text-secondary">Toronto Ward 39 Ciity Council Candidate</h4>
             </div>
         </div>
             
