Changed Ward 39 to Ward 20; NOTE: Screw Rob Ford

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <!-- Metadata -->
         <meta charset="UTF-8">
-        <meta name="description" content="The Campaign Website of John Letonja for Ward 39 City Councilor Candidate">
-        <meta name="keywords" content="John Letonja, Wary 39, Toronto, City, Councilor">
+        <meta name="description" content="The Campaign Website of John Letonja for Ward 20 City Councilor Candidate">
+        <meta name="keywords" content="John Letonja, Wary 20, Toronto, City, Councilor">
         <meta name="author" content="Roman K. Zupancic">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="my.css" />
         <!-- My Custom JS-->
         <script src="my.js"></script>
-        <title>John Letonja | Ward 39</title>
+        <title>John Letonja | Ward 20</title>
         <link rel="icon" href="imgs/faceUpdated2Resize.png">
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -41,7 +41,7 @@
                         <a class="nav-link noWrap" href="#aboutJohn">About John</a>
                     </li>
                     <li class="nav-item dropdown pl-0">
-                        <a class="nav-link dropdown-toggle noWrap" href=# id="navbardrop" data-toggle="dropdown">Ward 39 & You</a>
+                        <a class="nav-link dropdown-toggle noWrap" href=# id="navbardrop" data-toggle="dropdown">Ward 20 & You</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item noWrap" href="#promise">I, John Letonja, Promise</a>
                             <a class="dropdown-item noWrap" href="#strength">Figure of Strength</a>
@@ -68,7 +68,7 @@
                         <img class="img-fluid" src="imgs/faceUpdated2Resize.png" alt="The Figure of John Letonja">
                     </div>
                     <div class="col-md-6 col-lg-8">
-                        <img class="img-fluid titleCard" src="imgs/titleCard.png" alt="John Letonja: Toronto Ward 39 City Council Candidate">
+                        <img class="img-fluid titleCard" src="imgs/titleCard.png" alt="John Letonja: Toronto Ward 20 City Council Candidate">
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
             <div class="container titleText mb-5">
                 <img class="titleImage img-thumbnail img-fluid" src="imgs/faceUpdatedBackground.jpg" alt="A Portrait of John Letonja">
                 <h1 class="mb-0 display-4">John Letonja</h1>
-                <h4 class="font-italic text-secondary">Toronto Ward 39 Ciity Council Candidate</h4>
+                <h4 class="font-italic text-secondary">Toronto Ward 20 City Council Candidate</h4>
             </div>
         </div>
             
@@ -87,15 +87,15 @@
                 <h5 class="text-center text-secondary font-italic mb-4">John Letonja never gives up in fighting for what he believes in</h5>
                 <p>John Letonja is an inventor, social advocate, and a devoted family man who never stops working towards the common good. Toronto is a progressive city that has some challenges that he will be determined to meet and coordinate with his personal experience of living in the city. The diversification and growth of the city, throughout the years have given a different perspective to John.  
                 <br><br>Toronto has become a key integral part of the cultural and economic hub in Ontario and it is the people that have contributed to this cohesion.  With Scarborough being a central influence to the landscape and influence to the vibrant city atmosphere.
-                <br><br>A loving father himself, John knows the struggles of raising a family; that stress quickly builds up to a pressure point. As a goal that he is committed to is to make the accessibility, communication and interaction points a stress-free environment for the residents of Ward 39.  John wants to represent Ward 39 as a city councillor, for the good of the community and the city.</p>
+                <br><br>A loving father himself, John knows the struggles of raising a family; that stress quickly builds up to a pressure point. As a goal that he is committed to is to make the accessibility, communication and interaction points a stress-free environment for the residents of Ward 20.  John wants to represent Ward 20 as a city councillor, for the good of the community and the city.</p>
             </div>
         </div>
 
-        <!-- Ward 39 & You -->
-        <div class="container-fluid section" id="ward39">
+        <!-- Ward 20 & You -->
+        <div class="container-fluid section" id="ward20">
             <div class="container mb-5">
-                <h1 class="text-center mb-0">Ward 39 &amp; You</h1>
-                <h5 class="text-center font-italic mb-3 text-dark">Ward 39 offers you a place to live, laugh, love and play</h5>
+                <h1 class="text-center mb-0">Ward 20 &amp; You</h1>
+                <h5 class="text-center font-italic mb-3 text-dark">Ward 20 offers you a place to live, laugh, love and play</h5>
             </div>
             <div class="container">
                 <div class="row cell mb-4" id="promise">
@@ -140,7 +140,7 @@
                     </div>
                     <div class="col-md-9">
                         <h3>Knowlege and Wisdom</h3>
-                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councillors and outside sources. John Letonja promises to be a bastion of strength for the great people of Ward 39. He will stand up for YOUR common sense rights and lead YOU to a resolution for your cause. John is also adamant about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
+                        <p>Running a government in the modern world is not easy, and many politicians frequently fall victim to the tactics of both their fellow councillors and outside sources. John Letonja promises to be a bastion of strength for the great people of Ward 20. He will stand up for YOUR common sense rights and lead YOU to a resolution for your cause. John is also adamant about not voting for new taxes: he sees them as a last choice, not the first resource. John is also a teacher of strength, and will gladly aid the mayor and council on how NOT to waste tax payer dollars; he will help get more from your tax dollars. John will also involve YOU in the decisions the City makes. He believes that online polls and other methods can help get the community involved.</p>
                     </div>
                 </div>
                 <div class="row cell mb-4" id="wisdom">
