Added a paralax spacer in between About and Ward 20

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             </div>
         </div>
 
+        <div class="container-fluid titleContainer mt-0" style="background-image:url('imgs/toronto-city-hall.jpg'); background-size:cover; background-position:center; background-repeat:no-repeat; height:500px;">
+        </div>
+
         <!-- Ward 20 & You -->
         <div class="container-fluid section" id="ward20">
             <div class="container mb-5">
@@ -175,7 +178,7 @@
                 </div>
             </div>
         </div>
-
+        
         <!-- Contact John -->
         <div class="container-fluid section" id="contact">
             <div class="container">
